--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,5 +37,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+      function initMap() {
+        document.dispatchEvent(new Event("google-maps-script-loaded"));
+      }
+    </script>
   </body>
 </html>
